--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,17 @@
     --user-info-height: 60px;
     --disable-notifications-height: 70px;
     --chat-footer-height: 40px;
+    --contact-height: 70px;
   }
+
+/* general rules */
+
+ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+
 
 /* main background */
 
@@ -50,6 +60,8 @@
     height: var(--disable-notifications-height);
 }
 
+/* contacts list */
+
 .chat-list-container{
     background-color: white;
     height: calc(100% - var(--disable-notifications-height) - var(--user-info-height));
@@ -60,15 +72,54 @@
     background-color: rgb(250,250,250);
 }
 
+.contact{
+    background-color: green;
+    height: var(--contact-height);
+    width: 100%;
+    border-top: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
+}
+
+/* chat part */
+
 .chat-container{
     height: calc(100% - var(--user-info-height));
     position: relative;
 }
 
 .chat{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: calc(100% - var(--chat-footer-height));
     width: 100%;
-    background-image: url(https://w0.peakpx.com/wallpaper/818/148/HD-wallpaper-whatsapp-background-cool-dark-green-new-theme-whatsapp.jpg);
+    background-image: url(../img/mine.jpg);
+}
+
+.message-container{
+    width: 80%;
+    height: 90%;
+    display: flex;
+}
+
+.sent-message-container{
+    width: 50%;
+    height: 100%;
+    background-color: yellow;
+}
+
+.received-message-container{
+    width: 50%;
+    height: 100%;
+    background-color: magenta;
+}
+
+.sent-message{
+    background-color: rgb(213,249,186);
+}
+
+.received-message{
+    background-color: rgb(255,255,255);
 }
 
 .chat-footer{
