--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     --contact-height: 70px;
   }
 
+*{
+    font-size: 0.9rem;
+}
+
 /* general rules */
 
 ul{
@@ -136,15 +140,15 @@ img{
 }
 
 .sent-message-container{
-    width: 50%;
+    width: 100%;
     height: 100%;
-    background-color: yellow;
 }
 
-.received-message-container{
-    width: 50%;
-    height: 100%;
-    background-color: magenta;
+.sent-message,
+.received-message{
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 10px;
 }
 
 .sent-message{
