--- a/css/style.css
+++ b/css/style.css
@@ -217,15 +217,24 @@ p{
     height: 100%;
 }
 
+.sent-message-container span{
+    font-size: 0.7rem;
+    color: lightgrey;
+    position: absolute;
+    bottom: 0;
+    right: 5px;
+}
+
 .sent-message,
 .received-message{
     border-radius: 10px;
-    padding: 10px;
+    padding: 10px 20px;
     margin: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     clear: both;
+    position: relative;
 }
 
 .sent-message{
@@ -256,6 +265,9 @@ p{
 
 .drop-down-menu i{
   margin: 0 0 0 5px;
+  font-size: 1.4rem;
+  position: absolute;
+  transform: translate(-5px, -50%);
   display: none;
 }
 
